# contentflow

./: .dockerignore  .env.template  .gitignore  AGENTS.md  AI_AGENT_PDF_PROCESSING_TEMPLATES.md  Changes.md  README.md  azure.yaml  changes.md  personal-private-configurations.md
Analysis/: 00-full-analysis.md  (+6 more)
contentflow-lib/: .gitignore  KNOWLEDGE_GRAPH_SUMMARY.md  MISSING_EXECUTORS_ANALYSIS.md  PROJECT_OVERVIEW.md  PROPOSED_EXECUTORS.md  README.md  __init__.py  executor_catalog.yaml  pyproject.toml  requirements.txt
contentflow-lib/contentflow/connectors/: ai_inference_connector.py  ai_search_connector.py  azure_blob_connector.py  content_understanding_connector.py  cosmos_gremlin_connector.py
contentflow-lib/contentflow/executors/: __init__.py  ai_search_index_output.py  azure_blob_input_discovery.py  azure_blob_input_executor.py  azure_blob_output_executor.py  azure_content_understanding_extractor.py  azure_document_intelligence_extractor.py  azure_openai_agent_executor.py  azure_openai_embeddings_executor.py  base.py  content_classifier_executor.py  content_retriever.py  cross_document_comparison.py  custom_ai_prompt.py  entity_extraction_executor.py  excel_extractor.py  executor_config.py  executor_registry.py  fan_in_aggregator.py  field_mapper_executor.py  field_selector_executor.py  gptrag_search_index_doc_generator.py  input_executor.py  keyword_extractor_executor.py  knowledge_graph_enrichment.py  knowledge_graph_query.py  language_detector_executor.py  parallel_executor.py  pass_through.py  pdf_extractor.py  pii_detector_executor.py  powerpoint_extractor.py  recursive_text_chunker_executor.py  sentiment_analysis_executor.py  summarization_executor.py  table_row_splitter_executor.py  translation_executor.py  web_scraping_executor.py  word_extractor.py
contentflow-lib/contentflow/models/: _content.py
contentflow-lib/contentflow/pipeline/: _pipeline.py  _pipeline_executor.py  pipeline_factory.py
contentflow-lib/contentflow/utils/: __init__.py  credential_provider.py  logging.py  ttl_cache.py
contentflow-lib/samples/: .env.example  document_split_merge.py  dynamic_executor_example.py  nested_subworkflows.yaml  setup_logger.py  subworkflow_example.py  workflow_config.yaml
contentflow-lib/samples/00_run/: pipeline_config.yaml  run.py
contentflow-lib/samples/01-simple/: run.py  simple_config.yaml
contentflow-lib/samples/02-batch-processing/: README.md  batch_config.yaml  run.py
(+180 files in other folders)
